Upgrade test sources to Java 25
Signed-off-by: Marvin Froeder <velo.br@gmail.com>